--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-button {
-  margin: 10px;
+.color_box{
+    height: 20px;
+    width: 20px;
 }
